# tsbd-ai-vector-search

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: papers.json
scripts/: wait_for_oracle.py
sql/: schema_reference.sql
sql/setup/: 01_create_papersearch_user.sh
src/papersearch/: __init__.py  __main__.py  api.py  arxiv_kaggle.py  cli.py  config.py  db.py  embeddings.py  main.py  models.py  repository.py  vector_memory.py
static/: index.html
tests/: test_arxiv_kaggle.py  test_cli_parser.py  test_config_import.py  test_models.py  test_repository_sanitize.py  test_vector_memory.py
