[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "papersearch"
version = "1.0.0"
description = "Semantic search over academic papers using Oracle AI Vector Search"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Bănilean Alexandru-Ioan" },
  { name = "Niță-Gheorghiaș Anelis-Ramona" },
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "oracledb>=3.1.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sentence-transformers>=3.3.0",
  "numpy>=1.26.0",
  "kaggle>=1.6.0",
  "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.8.0",
]

[project.scripts]
papersearch = "papersearch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
